# releso

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  job_learn.sh  job_learn_continuous.sh  job_learn_dqn.sh  job_learn_learn.sh  pyproject.toml  rebuild_package.sh  requirements.txt  schema.json  schema.py  setup.cfg  setup.py  t.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_upload_wheels.yml  build_and_upload_wheels_test.yml  pre_commit.yml  publish_pypi.yml  publish_test_pypi.yml  tests.yml
SbSOvRL/: __main__.py  agent.py  base_model.py  base_parser.py  callback.py  exceptions.py  feature_extractor.py  gym_environment.py  mesh.py  parser_environment.py  spline.py  spor.py  validation.py  verbosity.py
SbSOvRL/util/: load_binary.py  logger.py  plotting.py  reward_helpers.py  util_funcs.py
docs/: Makefile
docs/source/: ReLeSO.rst  SPOR.rst  SbSOvRL.rst  conf.py  feature_extractor.rst  image_based_observations.rst  index.rst  installation.rst  json_schema.rst  mini_example.rst  usage.rst
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
examples/: README.md  bw_beispiel.json  bw_beispiel_direct.json  bw_beispiel_incremental.json  bw_beispiel_indirect.json  channel_direct_agent_compare.py  cluster_example.json  external_icms_solver_1.py  external_icms_solver_direct.py  external_icms_solver_incremental.py  get_reward_and_solver_observations.py  input_c_multi_clustermpi.json  job_charon.sh  job_charon_direct.sh  job_charon_incremental.sh  job_learn.sh  job_sbsovrl_channel_discrete.sh  nutils_converging_channel_incremental.hjson  poiseuille_flow_channel_shear_thinning.py  testing.ipynb  zero_example.hjson
examples/mini_example/: mini_example.hjson  mini_example.py
public/: .buildinfo  SbSOvRL.html  genindex.html  index.html  installation.html  json_schema.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
public/.doctrees/: SbSOvRL.doctree  environment.pickle  index.doctree  installation.doctree  json_schema.doctree  usage.doctree
public/_sources/: installation.rst.txt  json_schema.rst.txt  usage.rst.txt
releso/: __init__.py  __main__.py  __version__.py  _version.py  agent.py  base_model.py  base_parser.py  callback.py  exceptions.py  feature_extractor.py  geometry.py  gym_environment.py  mesh.py  observation.py  parser_environment.py  shape_parameterization.py  spline.py  spor.py  validation.py  verbosity.py
releso/util/: __init__.py  caching.py  cnn_xns_observations.py  ffd_vis_for_rl.py  load_binary.py  logger.py  module_import_raiser.py  plotting.py  reward_helpers.py  types.py  util_funcs.py  visualization.py
src/SbSOvRL/: __init__.py  __main__.py  agent.py  base_model.py  base_parser.py  callback.py  exceptions.py  feature_extractor.py  gym_environment.py  mesh.py  parser_environment.py  parser_functions.py  reward_parser.py  solver.py  spline.py  spor.py  test.py  validation.py  verbosity.py
src/SbSOvRL/docs/source/: SbSOvRL.rst  conf.py  index.rst  installation.rst  json_schema.rst  usage.rst
src/SbSOvRL/util/: __init__.py  ffd_vis_for_rl.py  load_binary.py  logger.py  plotting.py  reward_helpers.py  sbsovrl_types.py  util_funcs.py
tests/: agent_test.py  color_test.py  conftest.py  race_condition.py  test.py  test_agent.py  test_base_model.py  test_base_parser.py  test_callback.py  test_feature_extractor.py  test_geometry.py  test_gym_environment.py  test_logger.py  test_mesh.py  test_observations.py  test_parser_environment.py  test_reward_helpers.py  test_shape_parameterization.py  test_spline.py  test_spor.py  test_util_funcs.py  test_util_module_import_raiser.py  test_validation.py  test_verbosity.py
tests/samples/spor_python_scripts_tests/: file_exists_command_line.py  file_exists_has_main.py  file_exists_no_main.py  file_exists_unknown_import.py
