[project]
name = "releso"
authors = [
    {name = "Clemens Fricke", email = "clemens.david.fricke@tuwien.ac.at"}
]
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
        "Operating System :: OS Independent",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Natural Language :: English",
        "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic<2",
    "stable-baselines3",
    "tensorboard",
    "hjson",
]
dynamic = [
    "version"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/clemens-fricke/releso"
documentation = "https://releso.readthedocs.io/en/latest/"
issues = "https://github.com/clemens-fricke/releso/issues"
repository = "https://github.com/clemens-fricke/releso.git"

[project.optional-dependencies]
all = [
    "splinepy[all]"
]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
releso = "releso.__main__:entry"



[tool.setuptools]
packages = [
    "releso",
    "releso.util",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "releso.__version__.version"}

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
# Adding "ANN" would be really nice, but is to much work currently.
# Adding "PT" would be nice, for pytest naming convention.
# Adding "SIM" would be nice, but is to much work currently.
select = [
    "E", "F", "W", "I", "N", "D", "UP", "YTT", "S", "BLE", "B", "A", "C4",
    "ISC", "ICN", "PIE", "T20", "PYI", "Q", "RSE", "TID", "TCH", "INT", "PD",
    "PGH", "TRY", "FLY", "NPY", "PERF", "FURB", "LOG"]
ignore = ["N818", "TRY003"]
preview = true
exclude = ["examples"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D", "S", "E", "CPY", "PIE804", "NPY002"]
"__main__.py" = ["T20"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--ignore=tests/samples -W ignore::DeprecationWarning"
markers = [
    "torch_test",
]

[tool.coverage.run]
omit = [
    "releso/util/load_binary.py",
    "releso/util/cnn_xns_observations.py",
    "releso/util/plotting.py",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    # "class .*\bProtocol\):",
    # "@(abc\.)?abstractmethod",
    "except ModuleNotFoundError as err:",
    "except ImportError as err:",
]
