[project]
name = "releso"
authors = [
    {name = "Clemens Fricke", email = "clemens.david.fricke@tuwien.ac.at"}
]
requires-python = ">=3.9"
license-files = ["LICENSE"]
license = "MIT"
classifiers = [
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Natural Language :: English",
        "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic<2",
    "stable-baselines3",
    "tensorboard",
    "hjson",
]
dynamic = [
    "version"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/tataratat/releso"
documentation = "https://releso.readthedocs.io/en/latest/"
issues = "https://github.com/tataratat/releso/issues"
repository = "https://github.com/tataratat/releso.git"

[project.optional-dependencies]
all = [
    "splinepy[all]>=0.1.2",
    "torchvision",
]
test = [
    "pytest",
    "pytest-cov",
    "requests",
    "splinepy[all]>=0.1.2",
    "torchvision",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-jsonschema",
]
visualize = [
    "plotly",
    "kaleido",
]
dev = [
    "splinepy[all]>=0.1.2",
    "torchvision",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-jsonschema",
    "plotly",
    "kaleido",
]

[project.scripts]
releso = "releso.__main__:entry"



[tool.setuptools]
packages = [
    "releso",
    "releso.util",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "releso.__version__.__version__"}

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
preview = true
exclude = ["examples", "tests/samples"]

[tool.lint]
# Adding "ANN" would be really nice, but is to much work currently.
# Adding "PT" would be nice, for pytest naming convention.
# Adding "SIM" would be nice, but is to much work currently.
select = [
    "E", "F", "W", "I", "N", "D", "UP", "YTT", "S", "BLE", "B", "A", "C4",
    "ISC", "ICN", "PIE", "T20", "PYI", "Q", "RSE", "TID", "TCH", "INT", "PD",
    "PGH", "TRY", "FLY", "NPY", "PERF", "FURB", "LOG"]
ignore = ["N818", "TRY003"]

[tool.lint.per-file-ignores]
"tests/*.py" = ["D", "S", "E", "CPY", "PIE804", "NPY002"]
"__main__.py" = ["T20"]

[tool.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--ignore=tests/samples --ignore=examples -W ignore::DeprecationWarning"
markers = [
    "torch_test",
]

[tool.coverage.run]
omit = [
    "releso/util/load_binary.py",
    "releso/util/cnn_xns_observations.py",
    "releso/util/plotting.py",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    # "class .*\bProtocol\):",
    # "@(abc\.)?abstractmethod",
    "except ModuleNotFoundError as err:",
    "except ImportError as err:",
]
