[options.entry_points]
console_scripts =
    pyproject-build = releso.__main__:entrypoint
pipx.run =
    build = releso.__main__:entrypoint

[tool:pytest]
addopts = --ignore=tests/samples -W ignore::DeprecationWarning
markers =
    torch_test: mark a test as an torch test
[coverage:report]
exclude_also =
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
    except ModuleNotFoundError as err:
    except ImportError as err:
omit:
    releso/util/load_binary.py
    releso/util/cnn_xns_observations.py
    releso/util/plotting.py
